fix additional state bleed, multi input control positioning

--- a/index.css
+++ b/index.css
@@ -541,7 +541,8 @@ body {
   border: 1px solid #ddd; }
   .number--multi,
   .select--multi {
-    margin: 0; }
+    margin: 0;
+    width: 3ch; }
 
 .select {
   margin-left: 0;
@@ -560,7 +561,10 @@ body {
 
 .multi-container {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  position: relative;
+  min-height: 1.5rem;
+  padding-right: 1.5rem; }
   .multi-container__inputs {
     flex-wrap: wrap;
     display: flex;
@@ -568,7 +572,9 @@ body {
 
 .button-wrapper {
   margin-left: 0.3rem;
-  position: relative; }
+  position: absolute;
+  top: 0;
+  right: 0; }
 
 .add {
   display: inline-block;
